--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 
 RUN apt update && apt install -y \
-    gcc \
+    gcc g++ \
     python3 \
     && rm -rf /var/lib/apt/lists/*
 
