--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
+    "bytes": "^3.1.2",
     "core-js": "^3.19.3",
+    "file-saver": "^2.0.5",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.4.0",
     "js-cookie": "^3.0.1",
