--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "markdown-it": "^12.3.2",
     "markdown-it-katex": "^2.0.3",
     "nuxt": "^2.15.8",
+    "pixi.js": "^6.3.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
