--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "bytes": "^3.1.2",
+    "clipboard": "^2.0.10",
     "core-js": "^3.19.3",
     "file-saver": "^2.0.5",
     "github-markdown-css": "^5.1.0",
